[package]
edition = "2021"
name    = "wordle_helper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow   = "^1"
indexmap = "^1.9.1"
tokio    = {version = "^1.19", features = ["io-std", "io-util", "rt-multi-thread", "macros", "time", "sync"]}
